# argos-zero

./: .gitignore  CMakeLists.txt  README.md  config.xml  reciever_deamon.py  recv.ipynb  recv.py
python/: AGZ training.ipynb  AGZtraining.py  ARGZ-train-network.py  Data Parsing.ipynb  first-approach.txt  parse_data.py  supervisor.ipynb  supervisor.py  train-bin-network_2L.py  train-network.py  train-network_2.py  train-network_2L.py  train-network_3.py  train-network_4.py  tryout.py  wip_train_nn.ipynb
python/Collection-Daemon/: receiver.ipynb  receiver.py
python/Collection_Daemon/: receiver.py
python/Dynamic_Thresholding/: dynamic_thresholding.ipynb  dynamic_thresholding.py
python/Model Evaluation/: README.md  estimateElo.py  evaluator.py  glicko2.py  match.py  matchsystem.py  parameterparser.py  player.py  ratingmanager.py  ratings.txt  ratingsystem.py  referee.py  run.py  test19x19.py  test19x19_gnugo.py  test9x9.py  test9x9_gnugo.py  test9x9_pachi.py
python/Model Evaluation/rating/: ratings0
python/Model_Evaluation/: README.md  matchsystem.py  parameterparser.py  player.py  referee.py  test9x9_pachi.py
src/: CMakeLists.txt  gtp.cpp  rollout.cpp  selfplay.cpp  selfplay.cpp.autosave  speedtest.cpp  test.cpp
src/argos/: BatchProcessor.cpp  BatchProcessor.h  CMakeLists.txt  Collector.cpp  Collector.h  Config.cpp  Config.h  Engine.cpp  Engine.h  Network.cpp  Network.h  Node.cpp  Node.h  Position.cpp  Position.h  SpinLock.h  Statistics.h  ThreadPool.cpp  ThreadPool.h  TimeControl.cpp  TimeControl.h  Tree.cpp  Tree.cpp.autosave  Tree.h  Util.cpp  Util.h  collector.cpp  collector.h
src/capnp/: CMakeLists.txt  CapnpGame.c++  CapnpGame.capnp  CapnpGame.capnp.c++  CapnpGame.capnp.h  CapnpGame.cpp  CapnpGame.h  compile.sh  message_schema.capnp  message_schema.capnp.h
src/ego/: CMakeLists.txt
src/ego/goboard/: .playout_test.cpp.swp  CMakeLists.txt  board.cpp  board.hpp  color.cpp  color.hpp  config.hpp  dir.hpp  ego.cpp  ego.hpp  gammas.hpp  hash.cpp  hash.hpp  move.cpp  move.hpp  player.cpp  player.hpp  vertex.cpp  vertex.hpp
src/ego/gtp/: CMakeLists.txt  gtp.cpp  gtp.hpp  gtp_gogui.hpp  gtp_gogui_test.cpp  gtp_test.cpp
src/ego/utils/: CMakeLists.txt  fast_random.cpp  fast_random.hpp  fast_stack.hpp  nat-inl.hpp  nat.hpp  sgf.cpp  sgf.hpp  test.cpp  test.hpp  to_string.hpp  utils.hpp
test_networkdist/: run_client.sh
